--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-pandas = "^1.3.0"
+numpy = "^1.24.0"
+pandas = "^2.0.0"
 matplotlib = "^3.4.0"
 seaborn = "^0.11.0"
 
