--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = "^3.8.1"
 numpy = "^1.24.0"
 pandas = "^2.0.0"
-matplotlib = "^3.4.0"
-seaborn = "^0.11.0"
+matplotlib = "3.7.1"
+seaborn = "0.12.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
